fixed reported IE issue on Do more with Jumpstart

--- a/steps/main.scss
+++ b/steps/main.scss
@@ -21,5 +21,5 @@
 }
 
 
-@include animate-delays(animate-steps, 0, 2, 1.5);
+@include animate-delays(animate-steps, 0, 2, 1.5, 1.5, -1);
 @include animate-delays(animate-steps, 2, 7, 1.5, 1.5, 2);
